syntax = "proto3";
package gameMessageCore;
option go_package = "./messageGo/proto";

 

enum TaskOptionType{
  UnknownTaskOptionType = 0;
  // 上交若干数量的指定道具(寻物任务)
  HandInItem = 1;
  // 使用若干数量的指定道具
  UseItem = 2;
  // 获得若干数量的指定道具
  PickUpItem = 3;
  // 杀死若干数量的指定怪物
  KillMonster = 4; 
  //角色达到某等级
  UserLevel = 5;
  //指定插槽达到某等级
  TargetSlotLevel = 6;
  //指定数量插槽都达到某等级
  SlotLevelCount = 7;
  //指定合成技能达到某等级
  CraftSkillLevel = 8;
  //使用指定的配方合成
  RecipeUse = 9; 
  //完成若干数量的指定类型任务
  TaskTypeCount = 10;
  //到达指定坐标点指定半径范围内的区域
  TargetPosition = 11;
}


message TaskOptionItem {
  int32  item_cid = 1;
  int32  num = 2; // max 10
  string nft_id = 3;
}
message TaskOptionMonster {
  int32 mon_cid = 1;
  int32 num = 2;
}
message TaskOptionMoveTo {
  int32 r = 1;
  int32 c = 2;
}
message TaskOptionQuiz {
  int32 quiz_type = 1;
  int32 quiz_num = 2;
}
message TaskOptionCnf {
  TaskOptionType kind = 1;

  oneof data{
    int32             num = 11;
    TaskOptionItem    item = 12;
    TaskOptionMonster mon_info = 13;
    TaskOptionMoveTo  tar_pos = 14;
    TaskOptionQuiz    quiz_info = 15;
  }
}

message TaskOption {
  // 配置
  TaskOptionCnf option_cnf = 1;
  // 进度
  int32 rate = 2;
}

// 任务
message Task {
  // 任务 ID
  int32     task_id = 1;
  // 任务类型
  TaskOptionType  task_kind = 2;
  // 任务的接取时间
  int64     created_at_sec = 3;
  // 子项信息
  repeated  TaskOption options = 4;
}

enum TaskListType {
  TaskListTypeUnknown = 0;
  // 每日任务
  TaskListTypeDaily = 1;
  // 悬赏任务
  TaskListTypeRewarded = 2;
  // 主线任务(引导任务)
  TaskListTypeGuide = 3;
}

message TaskList{
  // task list id
  int32 id = 1;
  // task list type
  TaskListType kind = 2;
  // 任务链是否可以在接取
  bool can_receive = 3;
  // 任务链是否正在进行
  bool doing  = 4;
  // 进度
  int32 rate = 5;
  // current task
  Task cur_task = 6;
  // 任务奖励的领取进度(0, 1, 2)
  int32  receive_reward = 7;
}


// 用户已接任务列表
message PlayerTask {
  repeated  TaskList task_lists = 1;
}








